--- a/discordrules.html
+++ b/discordrules.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <title>ServerPred Rules</title>
 <meta charset="UTF-8">
@@ -14,35 +14,38 @@ html, body {
 	color: rgb(83, 255, 83);
 	background: rgb(39, 34, 34);
 }
+h1, h2 {
+	text-decoration: underline;
+}
 </style>
 </head>
 <body>
 <h1>INTRODUCTION</h1>
-As a member or moderator, either temporary or permanent, you are required to follow both the Discord Terms of Service as well as the rules of this server. You are not allowed to forgo any of these conditions in any part of the server, may it be verbal, visual, or vocal. Violating any of these rules can and will result in a punishment suiting your cause, albeit your position and ranking as well as your good-willed contributions to the server and its members. You are subjected to follow these conditions for as long as you are in the server. These rules do not apply to anywhere outside the server. You may use and communicate in the server as made available to you, not as how you wish to use it nor how you believe other people have told you to use it.
+As a member or moderator, either temporary or permanent, you are required to follow both the Discord Terms of Service as well as the rules of this server. You are not allowed to forgo any of these conditions in any part of the server, may it be verbal, visual, or vocal. Violating any of these rules can and will result in a punishment suiting your cause, albeit your position and ranking as well as your good-willed contributions to the server and its members. You are subjected to follow these conditions for any actions you may do in the server. You may use and communicate in the server as made available to you, not as how you wish to use it nor how you believe other people have told you to use it.
 
 
 
 <h2>I. ACCOUNT</h2>
-You will be banned if you are caught having a profile picture, status, about me page, user tag, nickname or banner that directly implies NSFW, NSFL, extreme war ideology (especially nazism and fascism), uncontrolled trolling or discrimination.
+You will be warned, kicked or banned if you are caught having a profile picture, status, about me page, user tag, nickname or banner that directly implies NSFW, NSFL, extreme war ideology (especially nazism and fascism), uncontrolled trolling or discrimination, depending on how intense the implication is. If you fail to comply after being warned, you may be kicked or banned.
 <br>
-You may either be kicked or banned if you are impersonating SciPred - not directly from the user profile, but from the actions you present in this server as well as outside the server.
+You may be warned, kicked or banned if you are impersonating SciPred - not directly from the user profile, but from the actions you present in this server as well as outside the server.
 <br>
 You may also be kicked or banned for impersonating other known people, depending on the actions you present in this server as well as outside the server.
 
 
 
 <h2>II. CONTENT</h2>
-Speak English. English is the main language in this server. If you wish to speak in vernacular, either get a translator or ask someone to assist you with translation.
+Speak English. English is the main language in this server. If you wish to speak in vernacular, either get a translator or ask someone to assist you with translation. Be sure that the translation is accurate.
 <br>
-Chains must only be done in the designated chain channel, advertisement in the advertisement channel, and so on.
+Chains must only be done in the designated chain/spam channel, advertisement in the advertisement channel, and so on.
 <br>
-No making fun of religious, life-threatening or political topics.
+No making fun of religious, suicidal or political topics.
 <br>
 No toxicity, harrassment, or racism. And do your best not to swear.
 <br>
 No starting flaming arguments or debates that can get out of hand.
 <br>
-No causing uncontrolled drama, self-pity, pessimism intended to spread to other people, existential crises, or false optimism.
+No causing uncontrolled drama, self-pity, pessimism intended to spread to other people or existential crises.
 <br>
 Respect others as they would respect you.
 <br>
@@ -68,11 +71,11 @@ No posting files that harmfully manipulate the computers or mobile devices of th
 <br>
 These include:
 <br>
-- Free Nitro scam links. Many of these usually have a single-character error in the link. Always double-check and report scams.
+- Free Nitro scam links. Many of these usually have a single-character error in the link. Always double-check and report scams. If you detect someone scamming people in the form of flooding channels (and sometimes DMs), immediately block them and ask help from staff.
 <br>
 - Anything regarding "Free Nitro". The words get you muted. If you want to give away free Nitro, ask a staff member or give the Nitro in private.
 <br>
-- Links to Quick Driver Updater. EVERY DRIVER UPDATER IS MALWARE.
+- Links to third-party driver updaters. All of these are scams.
 <br>
 - VBS files. Many viruses come in the hidden form of VBS files. Even though your script may be safe, I still cannot trust you to upload these sort of files.
 <br>
@@ -83,13 +86,19 @@ These include:
 
 
 <h2>III. SPAMMING</h2>
-No spam. Any form of spam may result in a mute, including:
+Disallowed forms of spam include:
 <br>
 - General Spam: malvertisement, scams, etc.
 <br>
-- Copypasta: repeatedly sending messages with the same content.
-<br>
 - Self-Advertisement: repeatedly flooding the server with massive adverts. These include links to other channels, servers, and web pages.
+<br>
+- PGP or Salt Packets: encrypted data only few people use.
+<br>
+- Ping Walls: Massive pings.
+<br>
+Allowed forms of spam, which can be done only in the spam channel, include:
+<br>
+- Copypasta: repeatedly sending messages with the same content.
 <br>
 - Emoji Spam: mass cluttering of emojis, or using every emoji in one message.
 <br>
@@ -107,34 +116,30 @@ No spam. Any form of spam may result in a mute, including:
 <br>
 - Malbolge: A programming language specifically designed to be almost impossible to use.
 <br>
-- PGP or Salt Packets: encrypted data only few people use.
-<br>
 - Blanks: these are empty-looking messages that fill up more than half of the entire screen.
 <br>
 - Text Walls: Huge chunks of text that fill the screen up.
-<br>
-- Ping Walls: Massive pings.
-<br>
-Some of these - specifically chains - can be done in the chain channel.
 
 
 
 <h2>IV. MODERATION</h2>
-Do not simply ask for staff. It will be given to you when I decide it will be given to you. If you are to apply for staff you will strongly need acceptable experience as well as evidence.
+Do not simply ask for staff. It will be given to you when I decide it will be given to you. If you are to apply for staff you will strongly need acceptable experience as well as evidence, and you will have to wait until staff applications are open.
 <br>
 No creating, modifying, or deleting roles, channels, invites and categories without permission from the owner. The level of moderation here is medium and has a 2FA requirement.
 <br>
-Do not abuse your moderation abilities. Do not use them to blackmail or dox people, force people into doing something that violates the rules, ban or kick people for no good reason, assign or remove roles from people without a sufficient reason or permission, mass-ping people or roles without a sufficient reason or permission, or violate the rules yourself using your presence as a staff member as an excuse.
+Do not abuse your moderation abilities. Do not use them to blackmail or dox people, force people into doing something that violates the rules, ban or kick people for no good reason, assign or remove roles from people without a sufficient reason or permission, mass-ping people or roles without a sufficient reason or permission, or violate the rules yourself using your presence as a staff member as an excuse. No creating emojis that violate the rules or remove already-existing emojis that you did not create.
+<br>
+If you see someone Nitro scam raiding or racist-advertising, permaban the user without hesitation or remorse. Delete all the user has said in the server within 24 hours.
 <br>
 Punishments for misbehavers that are not staff can vary depending on the offense.
 <br>
-No inviting/kicking bots without sufficient permission from the owner. No modifying Carl-bot settings without sufficient permission from the owner. No banning or kicking because of personal preference. Anyone caught trying to appeal a ban will be demoted unless the reason is legitimate and has evidence to back up the appeal. Anyone caught trying to delete evidence for a ban will be demoted.
+No inviting/kicking bots without sufficient permission from the owner. No modifying Carl-bot settings without sufficient permission from the owner. No banning or kicking because of personal preference. Anyone caught trying to appeal a ban without the owner's knowledge will be demoted unless the reason is legitimate and has evidence to back up the appeal. Anyone caught trying to delete evidence for a ban will be demoted.
 <br>
-Staff receive a temporary demote upon causing an infraction, the duration of the demote dependent on the violation caused. Upon 3 infractions the targeted staff member is permanently demoted and muted for one week.
+Staff receive a temporary demote upon causing an infraction, the duration of the demote dependent on the violation caused. Upon 3 or more infractions the targeted staff member is permanently demoted.
 <br>
 However, if the level of the violation caused by the staff is extreme, staff will be immediately banned from the server (as well as rickrolled to set an example).
 <br>
-If you notice any one of our staff misbehaving, report immediately to superior administration or directly to SciPred.
+If you notice any one of our staff misbehaving, report immediately to superior administration or directly to SciPred. False reports will be warned.
 
 
 
@@ -144,6 +149,8 @@ No begging. If you got re-rolled thats probably because you didnt respond in tim
 If you have won a giveaway but the giveaway host is offline, either wait for the host to become online and DM them there and then, or DM them while they're offline and they can give the prize once they are online.
 <br>
 If the giveaway host is online and you have DM'd them but they have not given the prize, either wait for a response and DM them again, or complain directly to SciPred that you have been scammed.
+<br>
+Do not erase giveaways that have already started. Wait for the giveaway to finish and for the prizes to be given, then you may delete the giveaway.
 
 
 
