--- a/discordrules.html
+++ b/discordrules.html
@@ -26,75 +26,57 @@ As a member or moderator, either temporary or permanent, you are required to fol
 
 
 <h2>I. ACCOUNT</h2>
-You will be warned, kicked or banned if you are caught having a profile picture, status, about me page, user tag, nickname or banner that directly implies NSFW, NSFL, extreme war ideology (especially nazism and fascism), uncontrolled trolling or discrimination, depending on how intense the implication is. If you fail to comply after being warned, you may be kicked or banned.
+You will be warned, kicked or banned if you are caught having a profile picture, status, about me page, user tag, nickname or banner that directly implies NSFW, NSFL, extreme war ideology (especially nazism and fascism), uncontrolled trolling or discrimination, depending on how intense the implication is. If you fail to comply after being warned or if the implication is heavy, you may be kicked or banned.
 <br>
 You may be warned, kicked or banned if you are impersonating SciPred - not directly from the user profile, but from the actions you present in this server as well as outside the server.
-<br>
-You may also be kicked or banned for impersonating other known people, depending on the actions you present in this server as well as outside the server.
 
 
 
 <h2>II. CONTENT</h2>
-Speak English. English is the main language in this server. If you wish to speak in vernacular, either get a translator or ask someone to assist you with translation. Be sure that the translation is accurate.
+Speak English. English is the main language in this server. If you wish to speak in vernacular, either get a translator or ask someone to assist you with translation. Be sure that the translation is accurate. (Words that violate the rules that have been mistranslated can be appealable.)
 <br>
 Chains must only be done in the designated chain/spam channel, advertisement in the advertisement channel, and so on.
 <br>
-No making fun of religious, suicidal or political topics.
+No making fun of religious, suicidal or political topics, especially Nazism, Fascism, Maoism, Stalinism, Biblical and/or Quran topics, and election candidacies.
 <br>
-No toxicity, harrassment, or racism. And do your best not to swear.
+No toxicity, harrassment, or discrimination of any human attribute such as race or gender. And do your best not to swear. Although Carl-bot autowarns people (and when at 3 or more warns mutes them), mutes from swearing are always appealable. Just DM a staff member or the owner that can unmute you.
 <br>
-No starting flaming arguments or debates that can get out of hand.
+No starting flaming arguments or debates that can get out of hand. Keep such arguments in DMs, or in other servers whenever appropriate.
 <br>
 No causing uncontrolled drama, self-pity, pessimism intended to spread to other people or existential crises.
 <br>
-Respect others as they would respect you.
+Respect others as they would respect you. However, this does not mean that you should be toxic if another is being toxic at you.
 <br>
-No blackmailing or doxxing members.
+No blackmailing or doxxing members, regardless of the intention or what the victim did.
 <br>
-Refrain from sharing private information in the server.
+Refrain from sharing private information in the server. Things such as address, credit card information, birth certificate, driver's license, and IDs are not allowed, regardless of how heavily censored or uncensored they may be.
 <br>
-No scamming or begging.
+No scamming or begging, especially Free Nitro scam links. Many of these usually have a single-character error in the link. Always double-check and report scams. If you detect someone scamming people in the form of flooding channels (and sometimes DMs), immediately block them and ask help from staff. If you want to legitimately give away free Nitro, ask a staff member or give the Nitro in private. If you want to give away Nitro in a giveaway, ask a staff member to make the giveaway.
 <br>
-No spam-pinging people.
+No spam-pinging people who have no confirmation that they are to be pinged. It's best if you decide not to spam-ping them in the first place.
 <br>
-No manipulating or mismanaging information.
+No manipulating or mismanaging information. Do not try to photoshop certain messages or conversations to ruin someone's reputation or to backstab them.
 <br>
-No direct NSFW or NSFL content.
+Strictly no direct NSFW or NSFL content. This includes pornography websites, hentai, gore, psychopathic shock videos and uncensored mutilation.
 <br>
-No adware, backdoors, DDoS, ransomware, bloatware, trojan horses, viruses, worms, spyware, rootkits, keyloggers, crimeware, RAM scrapers, phishing links, and any other form of malware.
+No adware, backdoors, DDoS, ransomware, bloatware, trojan horses, viruses, worms, spyware, rootkits, keyloggers, crimeware, RAM scrapers, phishing links, links to third-party driver updaters, grabify links, Visual Basic Script files, Fake Nitro rickroll links, and any other form of malware or dangerous software.
 <br>
 No posting videos, images, gifs or files that intentionally crash Discord.
 <br>
 No posting files that harmfully manipulate the Discord GUI in any way.
 <br>
 No posting files that harmfully manipulate the computers or mobile devices of those using Discord in any way.
-<br>
-These include:
-<br>
-- Free Nitro scam links. Many of these usually have a single-character error in the link. Always double-check and report scams. If you detect someone scamming people in the form of flooding channels (and sometimes DMs), immediately block them and ask help from staff.
-<br>
-- Anything regarding "Free Nitro". The words get you muted. If you want to give away free Nitro, ask a staff member or give the Nitro in private.
-<br>
-- Links to third-party driver updaters. All of these are scams.
-<br>
-- VBS files. Many viruses come in the hidden form of VBS files. Even though your script may be safe, I still cannot trust you to upload these sort of files.
-<br>
-- Gore Media. Regardless of the intention, it can come as a shock to many people in the server.
-<br>
-- Hentai. This ain't the right place for that.
 
 
 
 <h2>III. SPAMMING</h2>
 Disallowed forms of spam include:
 <br>
-- General Spam: malvertisement, scams, etc.
+- General Spam: malvertisement, ad scams, etc.
 <br>
 - Self-Advertisement: repeatedly flooding the server with massive adverts. These include links to other channels, servers, and web pages.
 <br>
-- PGP or Salt Packets: encrypted data only few people use.
-<br>
-- Ping Walls: Massive pings.
+- Ping Walls: Massive pings, usually consisting of different users.
 <br>
 Allowed forms of spam, which can be done only in the spam channel, include:
 <br>
@@ -112,13 +94,13 @@ Allowed forms of spam, which can be done only in the spam channel, include:
 <br>
 - Vertical Sentences: Chains that when read from top to bottom or vice versa form a sentence, phrase, or word.
 <br>
-- Random Characters: Chains or messages without any particular order or similarity, especially those that look like you slammed your hands on your keyboard.
+- Random Characters: Chains or messages without any particular order or similarity, especially those that look like you slammed your hands or feet (or sometimes your head) on your keyboard.
 <br>
 - Malbolge: A programming language specifically designed to be almost impossible to use.
 <br>
 - Blanks: these are empty-looking messages that fill up more than half of the entire screen.
 <br>
-- Text Walls: Huge chunks of text that fill the screen up.
+- Text Walls: Huge chunks of text that fill the screen up. However, although allowed by default, there is a limit to which a text wall can be considered approved, depending on how many lines the wall measures by height.
 
 
 
@@ -130,6 +112,8 @@ No creating, modifying, or deleting roles, channels, invites and categories with
 Do not abuse your moderation abilities. Do not use them to blackmail or dox people, force people into doing something that violates the rules, ban or kick people for no good reason, assign or remove roles from people without a sufficient reason or permission, mass-ping people or roles without a sufficient reason or permission, or violate the rules yourself using your presence as a staff member as an excuse. No creating emojis that violate the rules or remove already-existing emojis that you did not create.
 <br>
 If you see someone Nitro scam raiding or racist-advertising, permaban the user without hesitation or remorse. Delete all the user has said in the server within 24 hours.
+<br>
+If someone wants to give away Nitro, use the alias "FN courtesy of" in the giveaway instead of "Free Nitro, courtesy of" to prevent an accidental mute.
 <br>
 Punishments for misbehavers that are not staff can vary depending on the offense.
 <br>
@@ -144,11 +128,11 @@ If you notice any one of our staff misbehaving, report immediately to superior a
 
 
 <h2>V. GIVEAWAYS</h2>
-No begging. If you got re-rolled thats probably because you didnt respond in time, and we dont need your verification on if we host legit or not.
+No begging. If you got re-rolled, that's probably because you didn't respond in time, and we don't need your verification on if we host legit or not. If a giveaway does not have any specified response time then you should claim it as soon as possible. If you do not claim it within 3 days or so, the giveaway will be re-rolled.
 <br>
 If you have won a giveaway but the giveaway host is offline, either wait for the host to become online and DM them there and then, or DM them while they're offline and they can give the prize once they are online.
 <br>
-If the giveaway host is online and you have DM'd them but they have not given the prize, either wait for a response and DM them again, or complain directly to SciPred that you have been scammed.
+If the giveaway host is online and you have DM'd them but they have not given the prize, either wait for a response and DM them again, or complain directly to SciPred that you have been scammed. It is not suggested that you wait any longer than 24 hours upon winning the giveaway. False complaints will not be tolerated.
 <br>
 Do not erase giveaways that have already started. Wait for the giveaway to finish and for the prizes to be given, then you may delete the giveaway.
 
@@ -156,6 +140,16 @@ Do not erase giveaways that have already started. Wait for the giveaway to finis
 
 <h2>VI. LOOPHOLES, BYPASSES, AND FALLACIES</h2>
 You are not allowed to use loopholes, false arguments and the like to escape a designated consequence for breaking a rule. These include:
+<br>
+- Ad Antiquitatem: "It's right because it's always been done that way."
+<br>
+- Ad Hominem: "But he's bad because he did that, so it's only right I do this."
+<br>
+- Ad Misericordiam: "But please, let me do this just once! I'm so poor and I've never done this before!"
+<br>
+- Ad Populum: "According to the majority of people, this doesn't count."
+<br>
+- Ad Verecundiam: "According to this person, who is authoritative, this doesn't count."
 <br>
 - Attribution: "If he did it in another server without getting banned then I can do it in this server."
 <br>
@@ -173,21 +167,23 @@ You are not allowed to use loopholes, false arguments and the like to escape a d
 <br>
 - Contribution: "I helped this server out a lot, so I deserve it."
 <br>
+- Equivocation: "This is a Discord server. X is a Discord server. Therefore this server and X are the same."
+<br>
 - Experimentation: "It's just a test, no harm done."
+<br>
+- False Idiocy: "I don't understand."
 <br>
 - Freedom: "What use is a server that does not grant us freedom?"
 <br>
 - Hypocrisy: "As if you yourself follow the rules."
 <br>
-- Idiocy: "I don't understand."
+- Lacuna: "There isn't any rule that specifically states that this is a violation."
 <br>
 - Memeing: "I was just joking bro"
 <br>
 - Privacy: "Clearly this is my business, not yours."
 <br>
 - Private Interpretation: "According to me, this doesn't count."
-<br>
-- Public Interpretation: "According to this person/these people, this doesn't count."
 <br>
 - Regional Placement: "In the place I'm in, this rule doesn't apply."
 <br>
@@ -202,6 +198,8 @@ You are not allowed to use loopholes, false arguments and the like to escape a d
 - Superiority: "I'm a staff member, I can do what I want."
 <br>
 - Time Differentiation: "You're reprimanding the me now rather than the me from earlier. You can't do that."
+<br>
+- Tu quoque: "You did that, so I can do that too!"
 
 </body>
 </html>
