updated channel rule

--- a/discordrules.html
+++ b/discordrules.html
@@ -35,7 +35,7 @@ You may be warned, kicked or banned if you are impersonating SciPred - not direc
 <h2>II. CONTENT</h2>
 Speak English. English is the main language in this server. If you wish to speak in vernacular, either get a translator or ask someone to assist you with translation. Be sure that the translation is accurate. (Words that violate the rules that have been mistranslated can be appealable.)
 <br>
-Chains must only be done in the designated chain/spam channel, advertisement in the advertisement channel, and so on.
+Keep stuff in their respective channels. Chains must only be done in the designated chain/spam channel, advertisement in the advertisement channel, and so on. Conversations must be done in the main channel (or in the no-mic channel if in a vc) unless the conversations are minor (3 or less messages) or if the conversations include bot commands (in which case it must be done in a bot channel).
 <br>
 No making fun of religious, suicidal or political topics, especially Nazism, Fascism, Maoism, Stalinism, Biblical and/or Quran topics, and election candidacies.
 <br>
