more detailed rules

--- a/discordrules.html
+++ b/discordrules.html
@@ -74,7 +74,7 @@ h1, h2 {
 	<h2>III. CHANNELS</h2>
 	#nerd-spotted is the welcome channel.
 	<br>
-	#simplified-rules is the simplified rules channel. Note that because a more detailed version of the rules exist (which is this document), it does not mean that the rules you are to follow are only those stated in #simplified-rules, or vice versa.
+	#simplified-rules is the simplified rules channel. Note that because a more detailed version of the rules exist (which is this document), it does not mean that the only rules you are to follow are those that are stated in #simplified-rules, or vice versa.
 	<br>
 	#detailed-rules is the channel that leads you to this document.
 	<br>
@@ -164,11 +164,13 @@ h1, h2 {
 	<br>
 	Anyone caught demoting or promoting staff without the owner's consent or knowledge will be demoted and tempbanned without appeal. Anyone caught performing false mutes, warns, kicks or bans will be demoted and/or tempbanned.
 	<br>
-	No creating, modifying, or deleting roles, channels, invites and categories without permission from the owner. The level of moderation here is medium and has a 2FA requirement. You will be instantly demoted and permabanned without appeal if you are caught to have intentionally deleted an important server role. If accidental, you will be demoted and kicked.
+	No creating, modifying, or deleting roles, channels, invites and categories without permission from the owner. No modifiying, adding or removing slowmode from a channel without the owner's consent. The level of moderation here is medium and has a 2FA requirement. You will be instantly demoted and permabanned without appeal if you are caught to have intentionally deleted an important server role. If accidental, you will be demoted and kicked.
 	<br>
 	Do not abuse your moderation abilities. Do not use them to blackmail or dox people, force people into doing something that violates the rules, ban or kick people for no good reason, assign or remove roles from people without a sufficient reason or permission, mass-ping people or roles without a sufficient reason or permission, or violate the rules yourself using your presence as a staff member as an excuse. No creating emojis that violate the rules or remove already-existing emojis that you did not create.
 	<br>
 	Do not mute, kick, ban, or perform any moderation commands on a person because of personal preference.
+	<br>
+	Do not make up your own rules for the server. If you wish for a rule to be added, DM the owner.
 	<br>
 	Be cautious for any accounts that are younger than 14 days old. If you detect any suspicious activity from the account, tempban or permaban the account immediately depending on the activities.
 	<br>
