--- a/discordrules.html
+++ b/discordrules.html
@@ -92,7 +92,7 @@ h1, h2 {
 	<br>
 	#give-away-logs is for proof that the prize is given after a giveaway has ended.
 	<br>
-	#main-chat is the general communication channel. Conversations must strictly happen here. Conversations elsewhere that are more than 3 messages long are purgeable, excluding: those in the booster channel, those in the media channel that discuss certain media being sent, those in bot channels that discuss about the bots or their functionality, those in the feedback channel that discuss about feedback of a certain level, those in the spam channel that are more of conversations than of actual spam, and those in the no-mic channel for conversations with those in vcs that have no microphone.
+	#main-chat is the general communication channel. Conversations must strictly happen here. Conversations elsewhere that are more than 5 messages long are purgeable, excluding: those in the booster channel, those in the media channel that discuss certain media being sent, those in bot channels that discuss about the bots or their functionality, those in the feedback channel that discuss about feedback of something, those in the advertisement channel that discuss about the advertisements, those in the spam channel that are more of conversations than of actual spam, and those in the no-mic channel for conversations with those in vcs that have no microphone.
 	<br>
 	#boosters-only is a Nitro-booster-only version of the general channel.
 	<br>
